# query-doctor

./: README.md  main.py  pyproject.toml
sample_plans/: sample_one.txt  sample_two.txt
src/: execution_plan_node.py  main.py
