[tool.poetry]
name = "query-doctor"
version = "0.1.0"
description = "A tool to assist in the optimization of SQL queries."
authors = ["Josh Spratt <jspratt02@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redshift-connector = "^2.1.1"
openai = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
